--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
-data/
-._data
-__MACOSX/
+__pycache__/
+*.py[cod]
+*$py.class
+*.egg-info/
+.installed.cfg
+*.egg
+.cache
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+.history
+.DS_Store
+MANIFEST
